syntax = "proto3";
package cometbft.types.v3;

option go_package = "github.com/cometbft/cometbft/api/cometbft/types/v3";

import "cometbft/types/v1/types.proto";
import "cometbft/types/v1/validator.proto";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

// Vote represents a prevote or precommit vote from validators for
// consensus.
message Vote {
  v1.SignedMsgType type = 1;
  int64         height   = 2;
  int32         round    = 3;
  v1.BlockID    block_id = 4
      [(gogoproto.nullable) = false, (gogoproto.customname) = "BlockID"];  // zero if vote is nil.
  google.protobuf.Timestamp timestamp = 5
      [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  bytes validator_address = 6;
  int32 validator_index   = 7;
  // Vote signature by the validator if they participated in consensus for the
  // associated block.
  bytes signature = 8;
  // Vote extension provided by the application. Only valid for precommit
  // messages.
  bytes extension = 9;
  // Vote extension signature by the validator if they participated in
  // consensus for the associated block.
  // Only valid for precommit messages.
  bytes extension_signature = 10;
}

message ExtendedCommit {
  int64   height   = 1;
  int32   round    = 2;
  v1.BlockID block_id = 3
      [(gogoproto.nullable) = false, (gogoproto.customname) = "BlockID"];
  repeated ExtendedCommitSig extended_signatures = 4 [(gogoproto.nullable) = false];
}

// ExtendedCommitSig retains all the same fields as CommitSig but adds vote
// extension-related fields. We use two signatures to ensure backwards compatibility.
// That is the digest of the original signature is still the same in prior versions
message ExtendedCommitSig {
  v1.BlockIDFlag block_id_flag     = 1;
  bytes                     validator_address = 2;
  google.protobuf.Timestamp timestamp         = 3
      [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  bytes signature = 4;
  // Vote extension data
  bytes extension = 5;
  // Vote extension signature
  bytes extension_signature = 6;
}
